# sl-test-task-bot

./: .flake8  .gitignore  README.md  pyproject.toml
src/: config.py  db.py  fsm.py  keyboard.py  main.py  models.py  service.py
src/menu/: router.py  service.py
src/news/: router.py  service.py
src/settings/: router.py  service.py
src/weather/: router.py  service.py
tests/: conftest.py  test_global_services.py
tests/db/: test_settings_toggler.py
tests/http/: conftest.py
