[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Daniil Bozhko <voc.offacc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
